@@ -2,3 +2,5 @@
 *.o
 *.exe
 old/
+bstraux.*
+.
