@@ -3,13 +3,12 @@ SRCFILES += cbase/error.c \
 	    cbase/logfile.c \
 	    cbase/util.c \
 	    cbase/xmalloc.c \
-	    cbase/xstring.c \
+	    cbase/bstrlib.c \
 	    cbase/xtime.c
 
 HDRFILES += $(SRCFILES:.c=.h) \
 	    cbase/cbase.h \
-	    cbase/private.h \
-	    cbase/kazlib_wrapper.h
+	    cbase/private.h
 
 AUXFILES += cbase/AUTHORS \
 	    cbase/module.mk
